# context-engineering-workflow

./: .env.example  .gitignore  CONFIDENCE_SCORES.md  README.md  app.py  context-engineering-workflow.case-study.json  pyproject.toml
backend/: .env.example  README.md  api_server.py  pyproject.toml  requirements.txt
backend/config/tasks/: research_tasks.yaml
backend/src/: __init__.py
backend/src/document_processing/: __init__.py  doc_parser.py
backend/src/generation/: generation.py
backend/src/memory/: __init__.py
backend/src/rag/: __init__.py  embeddings.py  rag_pipeline.py  retriever.py
backend/src/tools/: rag_tool.py
backend/src/workflows/: agents.py  flow.py
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/app/: page.tsx
frontend/components/: ChatInterface.tsx  CitationsDisplay.tsx  DocumentUpload.tsx  LandingPage.tsx  LoadingSpinner.tsx  QueryInput.tsx  ResponseDisplay.tsx
frontend/lib/: api.ts  errorHandler.ts
src/config/: __init__.py
src/document_processing/: doc_parser.py
src/generation/: __init__.py  generation.py
src/rag/: rag_pipeline.py  retriever.py
src/tools/: __init__.py  rag_tool.py
src/workflows/: __init__.py  agents.py  flow.py
